src/istio/httpbin.yaml
##################################################################################################
#  @project.artifactId@
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: "@project.artifactId@"
  labels:
    app: "@project.artifactId@"
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: "@project.artifactId@"
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "@project.artifactId@"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: "@project.artifactId@"
        version: "@project.version@"
    spec:
      containers:
      - env:
        - name: JAVA_OPTIONS
          value: -Xmx64m -Xss128m
        - name: AB_OFF
          value: ""
        name:  spring-boot
        image: "@project.artifactId@:@project.version@"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
